--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ DB_PORT=5432
 POSTGRES_USER=minsiradmin
 POSTGRES_PASSWORD=i4n6s9l1y
 DATABASE=postgres
+HUGGINGFACE_HUB_TOKEN=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
+OPENAI_API_KEY=sk-proj-FZ2v2sIScsxguqHnuT4VT3BlbkFJEgAuDrqMx91v7PG2fhDu
+MINSIR_EMAIL_ID=mirbilal199x@outlook.com
+MINSIR_EMAIL_PASSWORD=APPollo1947
