--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ TEMP_ACCOUNT_KEY=8HUOUOr0nZsyDLh-c3FGmrI30HSJet0JqO2Y5F3gmQE=
 
 POSTGRES_DB=minsirdb
 DB_PORT=5432
+DB_HOST=localhost
 POSTGRES_USER=minsiradmin
 POSTGRES_PASSWORD=i4n6s9l1y
 DATABASE=postgres
